# hwtest

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  conftest.py  pyproject.toml
configs/: orange_pi_5_rack.yaml
deploy/: .env.example  docker-compose.yml
deploy/grafana/provisioning/dashboards/: dashboards.yaml  voltage_echo.json
deploy/grafana/provisioning/datasources/: influxdb.yaml
deploy/pi5_mcc_intg_a/: Dockerfile  README.md  docker-compose.yaml  hwtest-rack.service  setup.sh
deploy/systemd/: README.md  can0.service  hwtest-influxdb.service  hwtest-uut.service
docs/: architecture.md  coding-requirements.md  orange-pi-5-deployment.md  system-requirements.md
hwtest-bkprecision/: pyproject.toml
hwtest-bkprecision/src/hwtest_bkprecision/: __init__.py  emulator.py  psu.py  psu_channel.py  server.py
hwtest-bkprecision/tests/unit/: test_emulator.py  test_psu.py  test_psu_channel.py  test_server.py
hwtest-core/: README.md  pyproject.toml
hwtest-core/docs/: design.md
hwtest-core/src/hwtest_core/: __init__.py  errors.py
hwtest-core/src/hwtest_core/interfaces/: __init__.py  logger.py  monitor.py  state.py  streaming.py  telemetry.py
hwtest-core/src/hwtest_core/types/: __init__.py  bounds.py  common.py  monitor.py  state.py  streaming.py  telemetry.py  threshold.py
hwtest-core/tests/unit/: test_bounds.py  test_common_types.py  test_monitor.py  test_state.py  test_streaming.py  test_telemetry.py  test_threshold.py
hwtest-db/: pyproject.toml
hwtest-db/src/hwtest_db/: __init__.py  connection.py  models.py  repositories.py
hwtest-db/tests/: __init__.py
hwtest-db/tests/unit/: __init__.py  test_repositories.py
hwtest-intg/: pyproject.toml
hwtest-intg/configs/: voltage_echo_monitor.yaml
hwtest-intg/src/hwtest_intg/: __init__.py
hwtest-intg/src/hwtest_intg/can/: __init__.py  interface.py
hwtest-intg/src/hwtest_intg/clients/: __init__.py  uut_client.py
hwtest-intg/src/hwtest_intg/configs/: pi5_mcc_intg_a_rack.yaml
hwtest-intg/src/hwtest_intg/fixtures/: __init__.py  conftest.py
hwtest-intg/src/hwtest_intg/utils/: __init__.py  config.py
hwtest-intg/tests/: __init__.py  conftest.py
hwtest-intg/tests/integration/: __init__.py  test_analog_voltage.py  test_can_communication.py  test_voltage_echo_monitor.py
hwtest-logger/: pyproject.toml
hwtest-logger/src/hwtest_logger/: __init__.py  csv_import.py  csv_logger.py  influxdb_logger.py
hwtest-logger/tests/: __init__.py
hwtest-logger/tests/unit/: __init__.py  test_csv_logger.py  test_influxdb_logger.py
hwtest-mcc/: pyproject.toml
hwtest-mcc/src/hwtest_mcc/: __init__.py  mcc118.py  mcc134.py  mcc152.py  scanner.py
hwtest-mcc/tests/unit/: test_mcc118.py  test_mcc134.py  test_mcc152.py  test_scanner.py
hwtest-nats/: pyproject.toml
hwtest-nats/src/hwtest_nats/: __init__.py  config.py  connection.py  monitor.py  publisher.py  state.py  subscriber.py
hwtest-nats/tests/: __init__.py
hwtest-nats/tests/unit/: __init__.py  test_config.py  test_connection.py  test_monitor.py  test_publisher.py  test_state.py  test_subscriber.py
hwtest-rack/: pyproject.toml
hwtest-rack/src/hwtest_rack/: __init__.py  aliaser.py  calibrate.py  channel.py  cli.py  config.py  instance.py  loader.py  models.py  protocols.py  rack.py  server.py
hwtest-rack/tests/unit/: test_aliaser.py  test_channel.py  test_config.py  test_loader.py  test_server.py
hwtest-runner/: pyproject.toml
hwtest-runner/configs/: pi5_bench_a_station.yaml
hwtest-runner/src/hwtest_runner/: __init__.py  config.py  executor.py  models.py  server.py
hwtest-runner/tests/unit/: test_config.py
hwtest-scpi/: pyproject.toml
hwtest-scpi/src/hwtest_scpi/: __init__.py  connection.py  errors.py  number.py  transport.py  visa.py
hwtest-scpi/tests/unit/: test_connection.py  test_number.py  test_visa.py
hwtest-sim-pi4-waveshare/: pyproject.toml
hwtest-sim-pi4-waveshare/examples/: adc_can_combined.py
hwtest-sim-pi4-waveshare/src/hwtest_sim_pi4_waveshare/: __init__.py  can_interface.py  models.py  server.py  simulator.py
hwtest-sim-pi4-waveshare/tests/: __init__.py
hwtest-sim-pi4-waveshare/tests/unit/: __init__.py  test_ads1263.py  test_can_interface.py  test_mcp23017.py  test_simulator.py
hwtest-testcase/: pyproject.toml
hwtest-testcase/src/hwtest_testcase/: __init__.py  context.py  definition.py  monitor.py  phase.py  runner.py  testcase.py
hwtest-testcase/tests/: __init__.py
hwtest-testcase/tests/unit/: __init__.py  test_context.py  test_phase.py  test_runner.py  test_testcase.py
hwtest-uut/: pyproject.toml
hwtest-uut/examples/: adc_can_combined.py
hwtest-uut/src/hwtest_uut/: __init__.py  ads1263.py  can_interface.py  mcp23017.py  models.py  server.py  simulator.py
hwtest-uut/tests/unit/: test_ads1263.py  test_can_interface.py  test_mcp23017.py  test_simulator.py
hwtest-waveshare/: pyproject.toml
hwtest-waveshare/src/hwtest_waveshare/: __init__.py  ads1256.py  dac8532.py  gpio.py  high_precision_ad_da.py
hwtest-waveshare/tests/unit/: __init__.py  test_ads1256.py  test_dac8532.py  test_high_precision_ad_da.py
scripts/: fix-xrdp.sh  run_coverage.py
sql/: test_results_schema.sql
