[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwtest-uut"
version = "0.1.0"
description = "UUT (Unit Under Test) simulator for hwtest integration testing"
requires-python = ">=3.10"
license = {text = "Unlicense"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "hwtest-core",
    "hwtest-waveshare",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-can>=4.0",
    "smbus2>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "black>=24.0",
    "pylint>=3.0",
    "httpx>=0.24",
]

[project.scripts]
uut-simulator = "hwtest_uut.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.responses", "uvicorn", "can", "smbus2"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hwtest_uut.server"
disallow_untyped_decorators = false

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "import-outside-toplevel",
    "broad-exception-caught",
    "global-statement",
    "redefined-outer-name",
    "invalid-name",
]
